# internal/plan/handler/converters.go
@@ -1,17 +1,8 @@
-﻿package handler
+package handler
 
 import (
 	"saas/internal/plan/domain"
 )
-
-type PlanResponse struct {
-	ID          int64   `json:"id"`
-	Name        string  `json:"name"`
-	Price       float64 `json:"price"`
-	Description string  `json:"description,omitempty"`
-	CreatedAt   int64   `json:"created_at"`
-	UpdatedAt   int64   `json:"updated_at"`
-}
 
 func domainPlanToResponse(plan *domain.Plan) *PlanResponse {
 	if plan == nil {
@@ -41,22 +32,6 @@ func domainPlansToResponse(plans []*domain.Plan) []*PlanResponse {
 		}
 	}
 	return ret
-}
-
-type CreateRequest struct {
-	Name        string  `json:"name" binding:"required,max=50"`
-	Description string  `json:"description" binding:"required"`
-	Price       float64 `json:"price" binding:"required"`
-}
-
-type UpdateRequest struct {
-	Name        string  `json:"name" binding:"required,max=50"`
-	Description string  `json:"description" binding:"required"`
-	Price       float64 `json:"price" binding:"required"`
-}
-
-type PlanListResponse struct {
-	List []*PlanResponse `json:"list"`
 }
 
 func domainPlanListToResponse(data *domain.PlanList) *PlanListResponse {
